--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
   "id": "pushover",
   "name": "pushover",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Pushover",
   "main": "index.js",
   "author": "Jason Antman <jason@jasonantman.com>",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://github.com/jantman/franz-recipe-pushover.git",
   "config": {
     "serviceURL": "https://client.pushover.net/",
-    "serviceName": "Pushover",
     "message": "Pushover is a service to receive instant push notifications on your phone or tablet from a variety of sources.",
-    "popup": [],
     "hasNotificationSound": false,
     "hasIndirectMessages": false,
-    "hasTeamID": false,
-    "customURL": false,
-    "hostedOnly": false,
-    "webviewOptions": {
-      "disablewebsecurity": ""
-    },
-    "openDevTools": false
+    "hasTeamID": false
   }
 }
